# X-Mass-Hack-2024

./: .gitignore  Dockerfile  README.md  docker-compose.yml  input_example.xlsx  min_max.csv  ocved.csv  predict.py
API/: Program.cs  appsettings.json
Script/: catboost_model_v2.cbm  main.py  min_max.csv  output.csv  predict.py  pyproject.toml  python.Dockerfile
ServiceLayer/Services/: ScoringService.cs
_doc/: algorithm_guide.md  setup_guide.md  solution.md
