[tool.poetry]
name = "script"
version = "0.1.0"
description = ""
authors = ["norden <ka.ivanov@3l.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
catboost = "^1.2.7"
pandas = "^2.2.3"
argparse = "^1.4.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
